<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/nomeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounded"
            app:layout_constraintTop_toBottomOf="@id/nomeTv"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/emailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounded"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desejo_receber_e_mail_com_atualizacoes_de_oportunidades"
            android:layout_marginTop="-5dp"/>

        <TextView
            android:id="@+id/telefonesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefones"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <Spinner
                    android:id="@+id/telefoneSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:entries="@array/tipoTelefone"
                    android:minHeight="30dp"
                    android:padding="5dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <EditText
                    android:id="@+id/telefoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded"
                    android:inputType="phone"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/adicionarCelularBt"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:text="@string/adicionar_telefone_celular"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="10dp"/>

            <LinearLayout
                android:id="@+id/telefoneCelularLl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/telefoneCelularTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Telefone Celular:"
                    android:textSize="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/telefoneCelularEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/border_rounded"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/removerCelularBt"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:text="Remover telefone celular"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-5dp"
            android:layout_marginLeft="10dp"
            android:minHeight="48dp"
            android:padding="5dp" >

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:layout_weight="1" />
        </RadioGroup>

        <TextView
            android:id="@+id/dataNascimentoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounded"
            android:inputType="date"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/formacaoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formacao"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/formacao"
            android:minHeight="30dp"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/fundamentalOUmedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7F7F7"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/anoDeFormaturaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano_de_formatura"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

            <EditText
                android:id="@+id/anoDeFormaturaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rounded"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/outraFormacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F7F7F7"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/anoDeConclusaoTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ano_de_conlusao"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/anoDeConclusaoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/border_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/instituicaoTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/institui_o"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/instituicaoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mestradoOUdoutorado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tituloDeMonografiaTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo_de_monografia"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/tituloDeMonografiaEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/orientadorTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orientador"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/orientadorEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/vagasDeInteresseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vagas_de_interesse"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/vagasdeInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounded"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="-5dp"/>
    </LinearLayout>
</ScrollView>